<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.checkout.view.CheckoutActivity">

    <LinearLayout
        android:id="@+id/llProcessing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/BigText"
            android:gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/proccessing_msg"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llCongratulation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <ImageView
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_200sdp"
            android:src="@drawable/ic_congratuation"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/congratuation"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            style="@style/BigTextBold"
            android:text="@string/order_successful_msg"/>

        <Button
            android:id="@+id/btnContinueShopping"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/border_rounded_corner"
            android:text="@string/continue_shopping_cta"
            style="@style/SmallTextBold"
            android:textAllCaps="false"/>
    </LinearLayout>

</RelativeLayout>