<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    android:orientation="vertical"
    tools:context=".ui.gadgetlist.view.GadgetListActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/gadgets_title"
            android:textColor="@color/white"
            style="@style/BigText"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/relCart"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_count"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:id="@+id/txtBadgeCount"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/circle_red"
                style="@style/SmallTextBold"
                android:textColor="@color/white"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="-7dp"
                android:layout_below="@id/txtBadgeCount"
                android:src="@drawable/ic_cart"
                android:contentDescription="@string/cart_icon"/>

        </RelativeLayout>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvGadgets"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>