<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_grey"
    tools:context=".ui.cart.view.CartActivity">

    <RelativeLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="@dimen/_55sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_5sdp"
            android:src="@drawable/ic_arrow"
            android:contentDescription="@string/back_arrow"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/cart_title"
            android:textColor="@color/white"
            style="@style/BigText"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_75sdp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:paddingStart="@dimen/_20sdp"
        android:paddingEnd="@dimen/_20sdp">

        <Button
            android:id="@+id/btnCheckout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_centerInParent="true"
            android:background="@drawable/solid_rounded_corner"/>
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCart"
        android:layout_below="@id/actionBar"
        android:layout_above="@id/relButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/txtEmptyCart"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_cart_msg"
        style="@style/BigTextBold"
        android:layout_centerInParent="true"/>

</RelativeLayout>